Bug 388887 - View is slow to refresh when creating a file
Summary: View is slow to refresh when creating a file
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 17.12.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-13 00:23 UTC by ariasuni
Modified: 2018-02-13 17:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE Applications 18.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ariasuni 2018-01-13 00:23:20 UTC
When creating a directory in Dolphin, it instantly appears at the right place with focus on it.

However, when creating a file, the file doesn’t appear immediately: it takes approximately one second to appear. This is especially annoying because you can’t press enter to validate file name then press enter immediately to open it, you need to wait.

A quick ls shows me that the file is created before showing in Dolphin.
Comment 1 Kai Uwe Broulik 2018-02-13 08:53:57 UTC
Git commit 8b809b715f096b88552d8090dcdbbfb22a08b7a4 by Kai Uwe Broulik.
Committed on 13/02/2018 at 08:53.
Pushed by broulik into branch 'master'.

[KNewFileMenu] KDirNotify::emitFilesAdded after storedPut

Ensures KDirLister is updated immediately when a new file is created.
In contrast to a copy, storedPut is a lot simpler and dumber.

Differential Revision: https://phabricator.kde.org/D9912

M  +2    -0    src/filewidgets/knewfilemenu.cpp

https://commits.kde.org/kio/8b809b715f096b88552d8090dcdbbfb22a08b7a4