[KNewFileMenu] KDirNotify::emitFilesAdded after storedPut

Ensures KDirLister is updated immediately when a new file is created.
In contrast to a copy, storedPut is a lot simpler and dumber.

BUG: 388887

Differential Revision: https://phabricator.kde.org/D9912